Fixed selfdestroying, moving, spawning